# fhir_tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
fhir_tools/: __init__.py  generation.py  readers.py  resources.py  utils.py
fhir_tools/tests/: test_resources.py
scripts/: generate_definitions.py
tests/: test_resources.py
