[tool.poetry]
name = "fhir_tools"
version = "0.1.0"
description = ""
authors = ["Pavel 'Blane' Tuchin <blane.public@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7" || "~2.7"
six = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
