[tool.poetry]
name = "fhir_tools"
version = "0.1.2"
description = "Toolbox for working with FHIR Resources and Types"
authors = ["Pavel 'Blane' Tuchin <blane.public@gmail.com>"]

license = "MIT"

readme = "README.md"

keywords = ["medical", "fhir", "tools"]

repository = "https://github.com/blanebf/fhir_tools"
homepage = "https://github.com/blanebf/fhir_tools"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.7"
six = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
